refactor: upgrade for java 11